<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/azul"
    >

    <EditText
        android:id="@+id/edtCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/digite_o_cep_apenas_n_meros"
        android:layout_marginTop="10dp"
        android:textColor="@color/branco"
        />

    <Button
        android:id="@+id/btnPesquisa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/azul2"
        android:onClick="onClickPesquisar"
        android:text="@string/pesquisar_endereco"
        android:textColor="@color/branco" />

    <EditText
        android:id="@+id/edtLogradouro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/logradouro"
        android:layout_marginTop="10dp"
        android:textColor="@color/branco"
        />

    <EditText
        android:id="@+id/edtComplemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/complemento"
        android:layout_marginTop="10dp"
        android:textColor="@color/branco"
        />

    <EditText
        android:id="@+id/edtBairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/bairro"
        android:layout_marginTop="10dp"
        android:textColor="@color/branco"
        />

    <EditText
        android:id="@+id/edtLocalidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/localidade"
        android:layout_marginTop="10dp"
        android:textColor="@color/branco"
        />

    <EditText
        android:id="@+id/edtUf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/uf"
        android:layout_marginTop="10dp"
        android:textColor="@color/branco"
        />

</androidx.appcompat.widget.LinearLayoutCompat>